--- a/src/scss/LoginView.scss
+++ b/src/scss/LoginView.scss
@@ -42,3 +42,50 @@ body {
     margin-top: 0;
   }
 }
+
+.ledgerModal {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 60px;
+  background-color: white;
+  min-width: 320px;
+  margin: auto;
+  box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  display: none;
+
+  &.active {
+    display: table;
+  }
+
+  .closeBtn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    opacity: 0.4;
+    color: #000;
+    cursor: pointer;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+.blackBg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+  display: none;
+
+  &.active {
+    display: block;
+  }
+}
